[package]
name = "jetkcli"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde_derive = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
config = "0.10.1"
moins = "0.1.2"
git2 = "0.11.0"
toml = "0.5.6"
lazy_static = "1.4.0"
dirs = "2.0"
failure = "0.1.6"
clap = { version = "2.33.0", optional = true }

[features]
default = ["cli"]
cli = [ "clap"]

[[bin]]
name = "jet"
path = "src/bin/jet.rs"
required-features = ["clap"]
