[package]
name = "jetcli"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
config = "0.9.3"
serde_derive = "^1.0"
serde = "^1.0"
jet = {path = "../jetlib"}