[package]
name = "jet"
version = "0.1.0"
authors = ["Paul Delafosse <paul.delafosse@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde_derive = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
moins = "0.1.2"
git2 = "0.11.0"